implemented page adapter using fragment for swiping through users' profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">alc track</string>
+    <string name="title_activity_users_swipe">UsersSwipeActivity</string>
 </resources>
