--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">alc track</string>
+    <string name="app_name">Andela ALC</string>
     <string name="title_activity_users_swipe">UsersSwipeActivity</string>
     <string name="title_activity_main">MainActivity</string>
 </resources>
